# plainTailwindCSSPythonApp

./: README.md  build.sh  develop.sh
backend/: __init__.py  main.py  pyproject.toml
deploy/: serveAll.sh  serveFrontend.py
frontend/: index.html  package-lock.json  package.json  style.css  tailwind.config.css
