[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gonzalo Ruiz <rgon@rgon.es>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
